--- a/install
+++ b/install
@@ -19,8 +19,8 @@ Options:
         --no-modify-path    Don't modify shell config files (.zshrc, .bashrc, etc.)
 
 Examples:
-    curl -fsSL https://ashesofphoenix.github.io/wootui/install | bash
-    curl -fsSL https://ashesofphoenix.github.io/wootui/install | bash -s -- --version 1.0.180
+    curl -fsSL https://kkris0.github.io/wootui/install | bash
+    curl -fsSL https://kkris0.github.io/wootui/install | bash -s -- --version 1.0.180
 EOF
 }
 
@@ -147,8 +147,8 @@ INSTALL_DIR=$HOME/.wootui/bin
 mkdir -p "$INSTALL_DIR"
 
 if [ -z "$requested_version" ]; then
-    url="https://github.com/ashesofphoenix/wootui/releases/latest/download/$filename"
-    specific_version=$(curl -s https://api.github.com/repos/ashesofphoenix/wootui/releases/latest | sed -n 's/.*"tag_name": *"v\([^"]*\)".*/\1/p')
+    url="https://github.com/kkris0/wootui/releases/latest/download/$filename"
+    specific_version=$(curl -s https://api.github.com/repos/kkris0/wootui/releases/latest | sed -n 's/.*"tag_name": *"v\([^"]*\)".*/\1/p')
 
     if [[ $? -ne 0 || -z "$specific_version" ]]; then
         echo -e "${RED}Failed to fetch version information${NC}"
@@ -157,14 +157,14 @@ if [ -z "$requested_version" ]; then
 else
     # Strip leading 'v' if present
     requested_version="${requested_version#v}"
-    url="https://github.com/ashesofphoenix/wootui/releases/download/v${requested_version}/$filename"
+    url="https://github.com/kkris0/wootui/releases/download/v${requested_version}/$filename"
     specific_version=$requested_version
     
     # Verify the release exists before downloading
-    http_status=$(curl -sI -o /dev/null -w "%{http_code}" "https://github.com/ashesofphoenix/wootui/releases/tag/v${requested_version}")
+    http_status=$(curl -sI -o /dev/null -w "%{http_code}" "https://github.com/kkris0/wootui/releases/tag/v${requested_version}")
     if [ "$http_status" = "404" ]; then
         echo -e "${RED}Error: Release v${requested_version} not found${NC}"
-        echo -e "${MUTED}Available releases: https://github.com/ashesofphoenix/wootui/releases${NC}"
+        echo -e "${MUTED}Available releases: https://github.com/kkris0/wootui/releases${NC}"
         exit 1
     fi
 fi
@@ -409,6 +409,6 @@ echo -e "${MUTED}░▀░▀░ ▀▀▀▀ ▀▀▀▀ ${NC}░░▀░░ 
 echo -e ""
 echo -e ""
 echo -e ""
-echo -e "${MUTED}For more information visit ${NC}https://ashesofphoenix.github.io/wootui"
+echo -e "${MUTED}For more information visit ${NC}https://kkris0.github.io/wootui"
 echo -e ""
 echo -e ""
